Fixed dark mode button js issue

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -112,7 +112,6 @@ footer {
     border-radius: 5px;
 }
 
-
 /* ==============================*/
 /* Section - About Page          */
 /* ==============================*/
@@ -199,6 +198,12 @@ footer {
 .projects-container {
     max-width: 1100px;
     margin: 0 auto;
+}
+
+.projects-container2 {
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-top: .70rem;
 }
 
 .projects-intro {
